<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="movie_title">Movie Title</string>
    <string name="movie_overview">Movie Overview</string>
    <string name="detail_title">Title</string>
    <string name="detail_release_date">Release Date</string>
    <string name="detail_original_language">Original Language</string>
    <string name="detail_genre">Genre</string>
    <string name="detail_runtime">Runtime</string>
    <string name="detail_revenue">Revenue</string>
    <string name="detail_budget">Budget</string>
    <string name="detail_overview">Overview</string>
    <string name="lihat_detail">Lihat Detail</string>

    <string-array name="data_name">
        <item>Avengers: Infinity War</item>
        <item>Spider-Man: Into the Spider-Verse</item>
        <item>Deadpool 2</item>
        <item>Bohemian Rhapsody</item>
        <item>Venom</item>
        <item>Aquaman</item>
        <item>Bumblebee</item>
        <item>Creed II</item>
        <item>Bird Box</item>
        <item>The Mule</item>
    </string-array>
    <string-array name="data_overview">
        <item>As the Avengers and their allies have continued to protect the world from threats too large for any one hero to handle, a new danger has emerged from the cosmic shadows: Thanos. A despot of intergalactic infamy, his goal is to collect all six Infinity Stones, artifacts of unimaginable power, and use them to inflict his twisted will on all of reality. Everything the Avengers have fought for has led up to this moment - the fate of Earth and existence itself has never been more uncertain.</item>
        <item>Miles Morales is juggling his life between being a high school student and being a spider-man. When Wilson Kingpin Fisk uses a super collider, others from across the Spider-Verse are transported to this dimension.</item>
        <item>Wisecracking mercenary Deadpool battles the evil and powerful Cable and other bad guys to save a boy life.</item>
        <item>Singer Freddie Mercury, guitarist Brian May, drummer Roger Taylor and bass guitarist John Deacon take the music world by storm when they form the rock n roll band Queen in 1970. Hit songs become instant classics. When Mercurys increasingly wild lifestyle starts to spiral out of control, Queen soon faces its greatest challenge yet – finding a way to keep the band together amid the success and excess.</item>
        <item>Investigative journalist Eddie Brock attempts a comeback following a scandal, but accidentally becomes the host of Venom, a violent, super powerful alien symbiote. Soon, he must rely on his newfound powers to protect the world from a shadowy organization looking for a symbiote of their own.</item>
        <item>Once home to the most advanced civilization on Earth, Atlantis is now an underwater kingdom ruled by the power-hungry King Orm. With a vast army at his disposal, Orm plans to conquer the remaining oceanic people and then the surface world. Standing in his way is Arthur Curry, Orms half-human, half-Atlantean brother and true heir to the throne.</item>
        <item>On the run in the year 1987, Bumblebee finds refuge in a junkyard in a small Californian beach town. Charlie, on the cusp of turning 18 and trying to find her place in the world, discovers Bumblebee, battle-scarred and broken. When Charlie revives him, she quickly learns this is no ordinary yellow VW bug.</item>
        <item>Between personal obligations and training for his next big fight against an opponent with ties to his family past, Adonis Creed is up against the challenge of his life.</item>
        <item>Five years after an ominous unseen presence drives most of society to suicide, a survivor and her two children make a desperate bid to reach safety.</item>
        <item>Earl Stone, a man in his eighties, is broke, alone, and facing foreclosure of his business when he is offered a job that simply requires him to drive. Easy enough, but, unbeknownst to Earl, hes just signed on as a drug courier for a Mexican cartel. He does so well that his cargo increases exponentially, and Earl hit the radar of hard-charging DEA agent Colin Bates.</item>
    </string-array>
    <string-array name="data_photo">
        <item>@drawable/poster_avengerinfinity</item>
        <item>@drawable/poster_spiderman</item>
        <item>@drawable/poster_deadpool</item>
        <item>@drawable/poster_bohemian</item>
        <item>@drawable/poster_venom</item>
        <item>@drawable/poster_aquaman</item>
        <item>@drawable/poster_bumblebee</item>
        <item>@drawable/poster_creed</item>
        <item>@drawable/poster_birdbox</item>
        <item>@drawable/poster_themule</item>
    </string-array>
    <string-array name="data_release">
        <item>April 23, 2018</item>
        <item>December 1, 2018</item>
        <item>May 10, 2018</item>
        <item>October 30, 2018</item>
        <item>October 1, 2018</item>
        <item>December 21, 2018</item>
        <item>December 21, 2018</item>
        <item>November 14, 2018</item>
        <item>November 12, 2018</item>
        <item>December 10, 2018</item>
    </string-array>
    <string-array name="data_language">
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
        <item>English</item>
    </string-array>
    <string-array name="data_runtime">
        <item>2h 29m</item>
        <item>1h 57m</item>
        <item>2h 1m</item>
        <item>2h 15m</item>
        <item>1h 52m</item>
        <item>2h 24m</item>
        <item>1h 54m</item>
        <item>2h 10m</item>
        <item>2h 4m</item>
        <item>1h 57m</item>
    </string-array>
    <string-array name="data_budget">
        <item>$300,000,000.00</item>
        <item>$90,000,000.00</item>
        <item>$110,000,000.00</item>
        <item>$52,000,000.00</item>
        <item>$116,000,000.00</item>
        <item>$160,000,000.00</item>
        <item>$135,000,000.00</item>
        <item>$50,000,000.00</item>
        <item>$19,800,000.00</item>
        <item>$50,000,000.00</item>
    </string-array>
    <string-array name="data_revenue">
        <item>$2,046,239,637.00</item>
        <item>$375,450,417.00</item>
        <item>$741,547,413.00</item>
        <item>$894,027,543.00</item>
        <item>$855,013,954.00</item>
        <item>$1,143,689,193.00</item>
        <item>$465,895,025.00</item>
        <item>$137,944,327.00</item>
        <item>$50,000,000.00</item>
        <item>-</item>
    </string-array>
    <string-array name="data_genre">
        <item>Action, Adventure, Science Fiction</item>
        <item>Fiction, Adventure, Science Fiction, Animation, Comedy</item>
        <item>Action, Adventure, Adventure</item>
        <item>Drama, Music</item>
        <item>Action, Science Fiction</item>
        <item>Action, Adventure, Fantasy</item>
        <item>Action, Adventure, Science Fiction</item>
        <item>Drama</item>
        <item>Drama, Thriller</item>
        <item>Crime, Drama, Thriller</item>
    </string-array>
    <string-array name="data_top_billed_cast">
        <item>Scarlett Johansson, Mark Ruffalo, Chris Evans, Chris Hemsworth, Robert Downey Jr.</item>
        <item>Brian Tyree Henry, Mahershala Ali, Hailee Steinfeld, Jake Johnson</item>
        <item>Zazie Beetz, Julian Dennison, Morena Baccarin, Josh Brolin</item>
        <item>Lucy Boynton, Joseph Mazzello, Ben Hardy, Gwilym Lee</item>
        <item>Reid Scott, Scott Haze, Riz Ahmed, Michelle Williams</item>
        <item>Nicole Kidman, Patrick Wilson, Willem Dafoe, Amber Heard</item>
        <item>Pamela Adlon, Jason Ian Drucker, John Cena, Jorge Lendeborg Jr., Hailee Steinfeld</item>
        <item>Tessa Thompson, Florian Munteanu, Dolph Lundgren, Sylvester Stallone</item>
        <item>Danielle Macdonald, Rosa Salazar, Jacki Weaver, Trevante Rhodes</item>
        <item>Clint Eastwood, Bradley Cooper, Laurence Fishburne, Michael Peña, Dianne Wiest</item>
    </string-array>
</resources>
