<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity"
    android:id="@+id/activity_detail">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">
            <TableRow>
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:layout_marginRight="16dp"
                    android:id="@+id/img_photo"
                    android:scaleType="fitXY" />

                <LinearLayout
                    android:layout_width="257dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_title"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/data_detail_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="13dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:textColor="@android:color/black"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_release_date"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/data_detail_releasedate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="13dp"
                        android:textColor="@android:color/black"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_original_language"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/data_detail_language"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="13dp"
                        android:textColor="@android:color/black"
                        android:textStyle="normal" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/detail_runtime"
                        android:textColor="@android:color/darker_gray"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/data_detail_runtime"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="13dp"
                        android:textColor="@android:color/black"
                        android:textStyle="normal" />
                </LinearLayout>
            </TableRow>
        </TableLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/detail_genre"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:textColor="@android:color/black"
            android:id="@+id/data_detail_genre"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/detail_revenue"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:textColor="@android:color/black"
            android:id="@+id/data_detail_revenue"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/detail_budget"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:textColor="@android:color/black"
            android:id="@+id/data_detail_budget"
            android:textStyle="normal"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/detail_overview"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:justificationMode="inter_word"
            android:paddingLeft="25dp"
            android:paddingRight="16dp"
            android:textColor="@android:color/black"
            android:id="@+id/data_detail_overview"
            android:textStyle="normal"/>
    </LinearLayout>
</ScrollView>